apply plugin: 'java'
apply plugin: 'application'

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    compileOnly "org.jetbrains:annotations:24.+"
    implementation "io.github.jwharm.javagi:glib:2.76-0.6-SNAPSHOT"
    implementation "io.github.jwharm.javagi:gstreamer:1.20-0.6-SNAPSHOT"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
}

jar {
    archiveBaseName = "playsound"
    archiveVersion = "0.1.0"
}

mainClassName = "io.github.jwharm.javagi.examples.playsound.PlaySound"

